# tiny_vm

./: $Main.asm  .gitignore  ASTutils.py  CMakeCache.txt  CMakeLists.txt  LICENSE  Main.asm  Makefile  README.md  assemble.py  build_bytecode_table.py  builtins.c  builtins.h  calc.py  cmake_install.cmake  debug.txt  logger.c  logger.h  main.c  method_index.h  opdefs.txt  qcc  quack  quack.sh  quack_grammar.py  quack_parser.py  quackc  quackc.sh  quackpydot.py  quacksample.qck  sample.json  sample.txt  staticsemantics.py  test.asm  test.json  test.quack  testminus.json  transformer.py  translator.py  vm_bytecodes.c  (+11 more)
cjson/: cJSON.h
docs/: MethodCalls.md  assembly.md  includes.dot  memory.md  notes.md
docs/img/: Activation-records.graffle  Class-memory-structure.graffle  Graphics for Tiny VM.docx  Memory layout.graffle  VM ops.graffle  call_convention.graffle  frame-layout-return.graffle  linking.graffle  module-hierarchy.graffle
experiments/: array_ptr_refs.c
shim/: Builtins.c  README.md
tests/: asm.conf  opdefs.txt  tester.py
tests/expect/: Locals_stdout.txt  Looper_stdout.txt  MultiMethodJumps_stdout.txt  Pair_stdout.txt  RecursiveLoadSuperDuper_stdout.txt  RecursiveLoadSuper_stdout.txt  Roleur_stdout.txt  TestCounter_stdout.txt  UseThis_stdout.txt
tests/src/: Counter.asm  DuckCheck.asm  IsADuck.asm  Locals.asm  Looper.asm  Mod.asm  ModTest.asm  MultiMethodJumps.asm  NewThis.asm  RecursiveLoadSuper.asm  RecursiveLoadSuperDuper.asm  Roleur.asm  TESTS.csv  TestBuiltins.asm  TestCounter.asm  TransformerTest.asm  UseThis.asm
tools/: find_includes.py  generate_method_table.py
unit_tests/: Bool.json  Bool_print.asm  Bumper.asm  Int.json  Looper.asm  Nothing.json  Roleur.asm  String.json  exps_hard.txt  pair.asm  sample.asm  sample.json  test_builtins.c  test_roll.c  tests.txt  trivial.asm  twopairs.asm
